--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "gulp-minify-css": "^1.2.1"
   },
   "devDependencies": {
-    "node-bourbon": "^4.2.3"
+    "gulp-ruby-sass": "^2.0.3",
+    "node-bourbon": "^4.2.3",
+    "node-sass": "^3.3.3"
   },
   "author": "Nima",
   "license": "ISC"
