--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "gulp-minify-css": "^1.2.1"
   },
   "devDependencies": {
-    "gulp-ruby-sass": "^2.0.3",
+    "gulp-ruby-sass": "^2.0.4",
+    "gulp-sass": "^2.0.4",
+    "livereload": "^0.3.7",
     "node-bourbon": "^4.2.3",
     "node-sass": "^3.3.3"
   },
